raceforthegalaxy.css
/* Testlayout stylesheet */


/************* RFTG BGA gameui theme ************************/

html.new_design {
    background-image: url('img/back.jpg');
}
.new_design .roundedbox,
.new_design .roundedbox .roundedbox_main,
.new_design .roundedbox .roundedbox_topmain,
.new_design .roundedbox .roundedbox_bottommain,
.new_design .roundedbox .roundedbox_topleft,
.new_design .roundedbox .roundedbox_topright,
.new_design .roundedbox .roundedbox_bottomleft,
.new_design .roundedbox .roundedbox_bottomright,
.new_design .player-board
{
    background-color: #dadbdf;
}
.new_design #page-title a:link {
    color: white;
}
.new_design a:link {
    color: black;
}
.new_design .notouch-device a:hover {
    color: white;
}
.new_design a.bgabutton_blue:link {
    color: white;
}

.new_design .whiteblock {
    background-image: url('img/backtexture.jpg');
}

.new_design #game_play_area h3 {
    background-color: black;
    color: white;
    margin-left: -10px;
    margin-right: 100px;
    margin-bottom: 10px;
    padding-left: 15px;
    padding-top: 10px;
    margin-top: -5px;
    width: 400px;
    padding-bottom: 10px;
    text-transform: uppercase;
    border-radius: 0px 20px 20px 0px;
    display: inline-block;
}

.new_design #seemorelogs {
    background-image: none;
}

/**********************************************************/

.phasechoice .bgabutton {
    font-size: 12px;
}

.damage {
    position: absolute;
    background-image: url('img/damage.png');
    display: none;
}
.damaged .damage {
    display: block;
}


.new_design .cardcross {
    background-image: url('img/cardcross.svg');
    display: none;
}
.new_design .paymentMode .stockitem:hover .cardcross,
.new_design .paymentMode .stockitem_selected .cardcross,
.new_design .paymentMode .card:hover .cardcross,
.new_design .paymentMode .selectedCard .cardcross,
.paymentMode.paymentModeScavenger .stockitem:hover .scavengericon,
.paymentMode.paymentModeScavenger .stockitem_selected.scavenger_selected .scavengericon
{
    display:block;
}
.new_design .paymentMode .stockitem:hover .cardcross,
.new_design .paymentMode .card:hover .cardcross
{
    opacity: 0.5;
}
.new_design .paymentMode .stockitem_selected:hover .cardcross,
.new_design .paymentMode .selectedCard .cardcross,
.paymentMode.paymentModeScavenger .scavenger_selected .scavengericon
{
    opacity: 1;
}

.scavengericon {
    background-image: url('img/cardcross.svg');
    position: absolute;
    cursor: pointer;
    display: none;
    opacity: 0.7;
}
.scavengericon:hover {
    opacity: 1;
}

#scavengercount {
    position: absolute;
    display: flex;
    bottom: 5px;
    background-image: url('img/cardcross.svg');
    justify-content: center;
    align-items: center;
    visibility: hidden;
}
.tableau_panel #scavengercount {
    visibility: visible;
}

/**** tooltips ****/

/* iOS/Safari: disable native long-press callout menu on game surface. */
#ebd-body.touch-device {
    -webkit-touch-callout: none;
}

.cardtooltip {
    max-width: 262px;
}

.militarytooltip {
    display: inline-block;
}

@media (max-width: 800px) {
    /* Dim the board while a centered mobile tooltip is open. */
    #ebd-body.touch-device.rftg-mobile-tooltip-overlay-visible::before {
        content: "";
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: rgba(0, 0, 0, 0.45);
        pointer-events: none;
        z-index: 2500;
    }

    /* Force small-screen tooltips into a modal-like centered position. */
    #ebd-body.touch-device #dijit__MasterTooltip_0.rftg-mobile-tooltip-centered:not(.dijitTooltipHidden) {
        position: fixed;
        top: 50% !important;
        left: 50% !important;
        right: auto;
        bottom: auto;
        margin: 0;
        transform: translate(-50%, -50%);
        max-width: calc(100vw - 16px);
        z-index: 3000;
    }

    /* Keep tooltip content readable on short/narrow screens. */
    #ebd-body.touch-device #dijit__MasterTooltip_0.rftg-mobile-tooltip-centered:not(.dijitTooltipHidden) .dijitTooltipContainer {
        max-width: calc(100vw - 24px);
        max-height: calc(100vh - 24px);
        overflow: auto;
    }

    /* Centered modal tooltip does not need an anchor arrow. */
    #ebd-body.touch-device #dijit__MasterTooltip_0.rftg-mobile-tooltip-centered:not(.dijitTooltipHidden) .dijitTooltipConnector {
        display: none;
    }

    /* During close transition, hide the master node to avoid flicker/ghost boxes. */
    #ebd-body.touch-device #dijit__MasterTooltip_0.rftg-mobile-tooltip-closing {
        display: none;
        pointer-events: none;
    }
}

/** cards **/
.card_wrapper {
    position: relative;
    float: left;
    margin: 2px;
}
.card, .card_tooltip {
    position: relative;
}
.card {
    cursor: pointer;
}

.cardname, .cardname_tooltip {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-weight: bold;
    text-transform: uppercase;
}

.card_name_black .cardname, .card_name_black .cardname_tooltip {
    color: black;
}
.card_name_white .cardname, .card_name_white .cardname_tooltip {
    color: white;
    text-shadow: 1px 1px black;
}

.card_name_black .keyword,
.six_dev .keyword,
.six_dev_scoring_text .keyword {
    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
}

.alien { color: #fdff4f }
.uplift { color: #6cc121 }
.imperium { color: #643b65 }
.rebel { color: #cc1915 }
.terraforming { color: #b2896d }
.xeno { color: #4a6ab0 }
.antixeno { color: #a4b4d4 }

.good {
    display:flex;
    align-items: center;
    justify-content: center;
}

/********** tiny **********/
.card_size_tiny .card,
.card_size_tiny .card_wrapper,
.card_size_tiny .cardcross {
    width: 112.43px;
    height: 160px;
    border-radius: 4px;
}
.card_size_tiny .card,
.card_size_tiny .card_wrapper {
    background-size: auto 1600px;
}
.card_size_tiny .cardcross {
    background-size: 112.43px;
}
/* ... */

